fix post listing on home page on small screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -304,10 +304,8 @@ BLOG SECTION
 }
 
 @media screen and (max-width: 550px) {
-    #postList {
-        .blog-feature {
-            height: 200px;
-        }
+    .blog-feature {
+        height: 200px;
     }
 }
 
